Fixed some issues with resolve on routing

--- a/Server/public/javascripts/client/views/posts.html
+++ b/Server/public/javascripts/client/views/posts.html
@@ -1,4 +1,4 @@
-<div title="Posts" ng-controller="postsCtrl as vm">
+<div title="Posts">
 	<div class="page-header">
 		<h3>
 			<a href="{{vm.post.link}}" ng-show="vm.post.link">
