Added authentication with passport, passport-loca and jwt. Secured api routes. Added login, register and logout.

--- a/Server/public/javascripts/client/views/home.html
+++ b/Server/public/javascripts/client/views/home.html
@@ -1,6 +1,6 @@
 <div title="Home">
 	<div class="page-header">
-		<h1>Flapper News</h1>
+		<h3>News</h3>
 	</div>
 	<div ng-repeat="post in vm.posts | orderBy: '-upvotes'">
 		<span class="glyphicon glyphicon-thumbs-up"
@@ -32,5 +32,5 @@
 			</div>
 			<button type="submit" class="btn btn-primary">Post</button>
 		</div>
-	</form>	
+	</form>
 </div>
