--- a/Server/views/index.ejs
+++ b/Server/views/index.ejs
@@ -2,20 +2,49 @@
 <html>
 	<head>
 		<title>MEAN Stack</title>
-		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<link rel="stylesheet" href="/content/css/bootstrap-theme.min.css">
 
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 		<script src="/javascripts/client/angularApp.js"></script>
 
 		<script src="/javascripts/client/core/routing.js"></script>
 		<script src="/javascripts/client/services/postService.js"></script>
+		<script src="/javascripts/client/services/authService.js"></script>
 
 		<script src="/javascripts/client/controllers/mainCtrl.js"></script>
 		<script src="/javascripts/client/controllers/postsCtrl.js"></script>
+		<script src="/javascripts/client/controllers/authCtrl.js"></script>
+		<script src="/javascripts/client/controllers/navCtrl.js"></script>
 	</head>
-	<body ng-app="flapperNews">
+	<body ng-app="flapperNews" style="padding-top: 20px">
+    <nav class="navbar navbar-inverse navbar-fixed-top" ng-controller="navCtrl as vm">
+	      <div class="container">
+	        <div class="navbar-header">
+	          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+	            <span class="sr-only">Toggle navigation</span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </button>
+	          <a class="navbar-brand" href="/#/home">MEAN Stack</a>
+	        </div>
+	        <div id="navbar" class="collapse navbar-collapse">
+	          <ul class="nav navbar-nav">
+	          	<li ng-show="vm.isLoggedIn()"><a href="">Welcome {{ vm.currentUser() }}</a></li>
+	            <li class="active"><a href="/#/home">Home</a></li>
+	            <li ng-hide="vm.isLoggedIn()"><a href="/#/login">Login</a></li>
+	            <li ng-hide="vm.isLoggedIn()"><a href="/#/register">Register</a></li>
+	            <li ng-show="vm.isLoggedIn()"><a ng-click="vm.logOut()" href="">Sign Out</a></li>
+	          </ul>
+	        </div><!--/.nav-collapse -->
+	      </div>
+	    </nav>	
 		<div class="col-md-6 col-md-offset-3">
 			<ui-view></ui-view>
 		</div>
